--- a/project3/index.html
+++ b/project3/index.html
@@ -62,7 +62,7 @@
     </ul>
 </div>
 </div>
-<audio controls loop autoplay >
+<audio id="foobar" controls loop autoplay >
     <source src="weather-news.mp3" type="audio/mpeg">
 </audio>
   <script src="index.js"></script>
